:nail_care: Fix mobile navbar and content align

--- a/invoice/client/src/components/App.css
+++ b/invoice/client/src/components/App.css
@@ -7,3 +7,9 @@
   justify-content: center;
   padding: 20px 0;
 }
+
+@media only screen and (max-width: 600px) {
+  .App {
+    justify-content: flex-start;
+  }
+}
